cmake_minimum_required(VERSION 3.16)
project(ex6_amir_rosen15)

set(CMAKE_CXX_STANDARD 14)

add_executable(ex6_amir_rosen15
        Dictionary.cpp
        HashMap.cpp
        Dictionary.hpp
        HashMap.hpp
        presubmit.cpp
        Presubmit.hpp
        Helpers.h
        #test_ex6.cpp
        #tests_ex6_suchetzky.cpp
        )
